--- a/src/main/resources/static/css/manager/managerIndex.css
+++ b/src/main/resources/static/css/manager/managerIndex.css
@@ -28,114 +28,32 @@ html,body{
 	font-family: caoti; /*这里是说明调用来的字体名字*/
 	src: url("font/caoti.ttf"); /*这里是字体文件路径*/
 }
-#main{
-	position:relative;
-	width:100%;
-	height:100%;
-}
-#main .wrap{
-	position:absolute;
-	top:50%;
-	left:50%;
-	margin-left:-325px;
-	margin-top:-250px;
-	width:650px;
-	height:500px;
-	background:#fff;
-}
-#main .wrap .article{
-	position:absolute;
-	top:0;
-	left:0;
-	width:230px;
-	height:500px;
-}
-#main .wrap .comment{
-	position:absolute;
-	top:0;
-	left:230px;
-	width:230px;
-	height:166px;
-}
-#main .wrap .donate{
-	position:absolute;
-	top:166px;
-	left:230px;
-	width:230px;
-	height:166px;
-}
-#main .wrap .view{
-	position:absolute;
-	top:332px;
-	left:230px;
-	width:230px;
-	height:166px;
-}
-#main .wrap .user{
-	position:absolute;
-	top:0;
-	left:460px;
-	width:190px;
-	height:220px;
-}
-#main .wrap .amend{
-	position:absolute;
-	top:220px;
-	left:460px;
-	width:190px;
-	height:140px;
-}
-#main .wrap .exit{
-	position:absolute;
-	top:360px;
-	left:460px;
-	width:190px;
-	height:140px;
-}
-#main .item{
-	transition:0.6s;
-	cursor:pointer;
-}
-#main .item:hover{
-	transform:scale(1.3);
-	z-index:100000;
-}
-#main .item:hover img{
-	opacity:1 !important;
-}
-#main .item img{
-	position:absolute;
-	top:0;
-	left:0;
-}
-#main .item p:nth-of-type(1){
-	position:absolute;
-	top:50%;
-	left:50%;
-	font-size:35px;
-	width:25px;
-	margin-top:-50px;
-	margin-left:-13px;
-}
-#main .item p:nth-of-type(2){
-	position:absolute;
-	top:50%;
-	left:50%;
-	margin-top:-10px;
-	margin-left:30px;
-}
-#main .user p:nth-of-type(1){
-	width:80px;
-	margin-left:-35px !important;
-}
-#main .user p:nth-of-type(2){
-	margin-left:40px !important;
-}
-#main .amend p:nth-of-type(1){
-	width:80px;
-	margin-left:-35px !important;
-}
 
+.item{
+    width:160px;
+    height:100px;
+    margin:15px 1%;
+    background:#0588d1;
+    border:1px solid #ccc;
+    float:left;
+    text-align:center;
+    transition:1s;
+}
+.item a{
+    color:#fff;
+    font-weight:bold;
+    ont-size:16px;
+    display:inline-block;
+    width:100%;
+    height:100%;
+    line-height:105px;
+}
+.item:hover{
+    border-radius:30%;
+}
+.item:hover a{
+    text-decoration:none;
+}
 
 
 
